DO-132 Some basic charts have been created

--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -27,6 +27,8 @@
     --secondary: 210 40% 96.1%;
     --secondary-foreground: 222.2 47.4% 11.2%;
 
+    --goingTeal: 185 40% 27%;
+
     --accent: 210 40% 96.1%;
     --accent-foreground: 222.2 47.4% 11.2%;
 
@@ -36,6 +38,18 @@
     --ring: 222.2 84% 4.9%;
 
     --radius: 0.5rem;
+
+    --vis-tooltip-background-color: none !important;
+    --vis-tooltip-border-color: none !important;
+    --vis-tooltip-text-color: none !important;
+    --vis-tooltip-shadow-color: none !important;
+    --vis-tooltip-backdrop-filter: none !important;
+    --vis-tooltip-padding: none !important;
+
+    --vis-primary-color: var(--primary);
+    /* change to any hsl value you want */
+    --vis-secondary-color: var(--goingTeal);
+    --vis-text-color: var(--muted-foreground);
   }
   * {
     @apply border-border;
