DO-133 homepage styled. Need to add skeleton for loading

--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -78,6 +78,19 @@
   body {
     @apply bg-background text-foreground;
   }
+  ::-webkit-scrollbar {
+    display: none;
+  }
+
+  /* Hide scrollbar for Firefox */
+  * {
+    scrollbar-width: none;
+  }
+
+  /* Hide scrollbar for IE and Edge */
+  * {
+    -ms-overflow-style: none;
+  }
 }
 
 html {
